# experiments

./: CMakeLists.txt  README.md
elf_file_types/: CMakeLists.txt  foo.c  main.c
elf_segments/: CMakeLists.txt  foo.c  main.c  test.c  test_align.ld  test_lma.ld  test_mix.ld  test_mix_exec_first.ld
minikube_cgroups/: Dockerfile  entrypoint.sh  run_minikube.sh
php_symbol_override/: Dockerfile  README.md
php_symbol_override/ext/: config.m4  elfutils.cc  elfutils.hpp  hello.cc  logger.hpp
symbol_override/: CMakeLists.txt  elfutils.cc  elfutils.hpp  init.cc  test_symbol_override.cc
tls/: CMakeLists.txt  labels.hpp  lib.cc  lib.hpp  main.cc  main_dlopen.cc  otel_process_ctx.c  otel_process_ctx.h
uprobe_overhead/: CMakeLists.txt  run.sh  uprobe_overhead.cpp
